<resources>
    <string name="app_name">Acme-Explorer</string>
    <string name="login_email_et_hint">Correo electrónico</string>
    <string name="login_pass_et_hint">Contraseña</string>
    <string name="login_button_mail_text">acceder</string>
    <string name="login_button_google_text">acceso con google</string>
    <string name="login_button_register_text">Pulsa aquí para registrarte</string>
    <string name="login_mail_error_1">El correo electrónico no puede estar vacío</string>
    <string name="login_mail_error_2">El password no puede estar vacío</string>
    <string name="login_mail_access_error">Se ha producido un error de acceso</string>
    <string name="login_verified_mail_error">Aún no has validado tu cuenta, ¿quieres que te enviemos un email de validación?</string>
    <string name="login_verified_mail_error_ok">Enviar correo</string>
    <string name="login_verified_mail_error_sent">Hemos enviado un correo de verificación</string>
    <string name="login_verified_mail_error_no_sent">No se ha podido enviar un correo de verificación a tu cuenta</string>
    <string name="login_verified_mail_error_cancel">No enviar correo</string>
    <string name="login_google_play_services_error">Debes actualizar Google Play Services antes de continuar</string>
    <string name="gps_download_url">market://details?id=com.google.android.gms</string>
    <string name="market_download_url">https://play.google.com/store/apps/details?id=com.google.android.gms</string>
    <string name="login_download_gps">Actualizar</string>
    <string name="default_client_id">472472523220-480bq4suakn6lrk8nm61a41pbp1t5fbu.apps.googleusercontent.com</string>
    <string name="login_completed">El usuario %1$s ha accedido correctamente</string>
    <string name="login_pass_confirmation_et_hint">Introducir de nuevo la contraseña</string>
    <string name="signup_error_pass_not_match">Las contraseñas no coinciden</string>
    <string name="signup_error_pass">Debe introducir la contraseña</string>
    <string name="signup_error_user">Debe introducir el nombre de usuario</string>
    <string name="signup_created">Usuario creado correctamente</string>
    <string name="signup_created_error">No se ha podido crear el usuario</string>
    <string name="login_button_registration_text">Registrar</string>
    <string name="firebase_url">https://acmeexplorer-1cff3-default-rtdb.europe-west1.firebasedatabase.app/</string>
    <string name="take_picture">Obtener imagen</string>
    <string name="take_picture_camera">Necesitamos acceder a tu camara</string>
    <string name="take_picture_camera_rationale">Necesitamos acceder a tu cámara</string>
    <string name="take_picture_camera_rationale_ok">permitir</string>
    <string name="camera_not_granted">No es posible usar esta función sin la cámara</string>
    <string name="take_write_external_storage_rationale">Necesitamos permisos de escritura en almacenamiento externo</string>
    <string name="write_external_storage_not_granted">No es posible usar esta función sin escritura en almacenamiento externo</string>
    <string name="main_button_create_trip_text">New trip</string>
    <string name="main_button_profile_text">Profile</string>
    <string name="trip_create_name_et_hint">Nombre del viaje</string>
    <string name="trip_create_description_et_hint">Descripción de viaje</string>
    <string name="trip_create_price_et_hint">Precio del viaje</string>
    <string name="trip_create_start_date_et_hint">Fecha de inicio</string>
    <string name="trip_create_finish_date_et_hint">Fecha de finalización</string>
    <string name="trip_create_picture_et_hint">Añada una imagen del viaje</string>
    <string name="trip_create_ticker">Ticker autogenerado</string>
    <string name="trip_create_button_text">Añadir viaje</string>
    <string name="trip_create_title_et_hint">Título del viaje</string>
    <string name="trip_create_verication_empty">this field must be filled</string>
    <string name="trip_create_verication_date_before">start date must be before finish date</string>
    <string name="profile_name_et_hint">Nombre de usuario</string>
    <string name="profile_surname_et_hint">Apellidos</string>
    <string name="profile_address_et_hint">Dirección</string>
    <string name="profile_save_button_text">Guardar</string>
    <string name="profile_photo_button_text">FOTO</string>
    <string name="take_picture_button_text">FOTO</string>
    <string name="location_rationale">Necesitamos tu localización para esta funcionalidad</string>
    <string name="location_rationale_ok">Aceptar</string>
    <string name="location_cancel">Cancelar</string>
    <string name="main_location_buttonn_text">Localizar</string>
    <string name="main_location_button_text">Location</string>
    <string name="open_weather_map_api_key">4e4a72797bd0f8c5e75adca70fdb5f16</string>
    <string name="location_gps">Debes activar el GPS</string>
    <string name="trip_create_latitude_et_hint">Latitud</string>
    <string name="trip_create_longitude_et_hint">Longitud</string>
    <string name="gps_enable">Recuerde tener activo su gps</string>
</resources>