<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".LoginActivity">

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"></ProgressBar>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/login_logo" />

    <ScrollView
        android:id="@+id/login_main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/login_email_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_email_et_hint"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/login_pass_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_pass_et_hint"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_marginTop="16dp"
                android:id="@+id/login_button_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/blue_button"
                android:drawableLeft="@drawable/common_full_open_on_phone"
                android:text="@string/login_button_mail_text"
                android:textAllCaps="true"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/login_button_google"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/red_google"
                android:drawableLeft="@drawable/common_full_open_on_phone"
                android:text="@string/login_button_google_text"
                android:textAllCaps="true"
                android:textColor="@color/white" />

            <Button
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_marginTop="54dp"
                android:id="@+id/login_button_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_button_register_text"
                android:textAllCaps="true"
                android:textColor="@color/blue_app" />


        </LinearLayout>

    </ScrollView>

</LinearLayout>