<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="false">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".TripCreateActivity">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/trip_create_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/trip_create_title_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/trip_create_title_et_hint"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/trip_create_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/trip_create_description_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/trip_create_description_et_hint"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/trip_create_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/trip_create_price_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/trip_create_price_et_hint"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/trip_create_start_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/trip_create_start_date_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:onClick="setStartDate"
                app:srcCompat="@drawable/ic_date_in" />

            <AutoCompleteTextView
                android:id="@+id/trip_create_start_date_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:hint="@string/trip_create_start_date_et_hint"
                android:inputType="date"
                android:maxLines="1"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/trip_create_finish_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/trip_create_finish_date_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:onClick="setFinishDate"
                app:srcCompat="@drawable/ic_date_in" />

            <AutoCompleteTextView
                android:id="@+id/trip_create_finish_date_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:hint="@string/trip_create_finish_date_et_hint"
                android:inputType="date"
                android:maxLines="1"
                android:singleLine="true" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/trip_create_latitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/trip_create_latitude_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/trip_create_latitude_et_hint"
                android:inputType="numberSigned|numberDecimal"
                android:maxLines="1"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/trip_create_longitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/trip_create_longitude_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/trip_create_longitude_et_hint"
                android:inputType="numberSigned|numberDecimal"
                android:maxLines="1"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/trip_create_picture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/trip_create_picture_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/trip_create_picture_et_hint"
                android:inputType="textUri"
                android:maxLines="1"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/trip_create_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:backgroundTint="@color/red_google"
            android:text="@string/trip_create_button_text"
            android:textAllCaps="true"
            android:textColor="@color/white" />

    </LinearLayout>
</ScrollView>