<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <GridView
        android:id="@+id/gridView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/main_create_trip_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:backgroundTint="@color/blue_app"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:text="@string/main_button_create_trip_text"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/main_create_profile_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:backgroundTint="@color/blue_app"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:text="@string/main_button_profile_text"
        />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/main_location_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:backgroundTint="@color/blue_app"
            android:drawableLeft="@drawable/common_google_signin_btn_icon_dark"
            android:text="@string/main_location_button_text"
            android:textAllCaps="true"
            android:textColor="@color/white" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>